# DspTap

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE.md  README.md  a.out
.github/workflows/: ci.yml  style.yml
include/dsptap/: fft.h
include/tap/dsp/: fft.h  fir_kernels.h  kaiser.h  psola.h  pvoc.h  quantize.h  sample_traits.h  yin.h
include/tap/dsp/analysis/: multitone_analysis.h  sine_analysis.h
notebooks/: dsptap_py.py  pitchshift.ipynb
tests/: CMakeLists.txt  test_analysis.cpp  test_fft.cpp  test_fft_backend.cpp  test_fir_kernels.cpp  test_kaiser.cpp  test_psola.cpp  test_pvoc.cpp  test_quantize.cpp  test_sample_traits.cpp  test_yin.cpp
tools/capi/: CMakeLists.txt  dsptap_capi.cpp  dsptap_capi.h
